--- a/LifeGame/MainWindow.xaml
+++ b/LifeGame/MainWindow.xaml
@@ -3,9 +3,240 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525"
         DataContext="{StaticResource ViewModel}">
+	<Window.Resources>
+		<Style x:Key="PlayPauseButtonStyle" TargetType="{x:Type ToggleButton}">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ToggleButton}">
+						<Grid x:Name="grid" RenderTransformOrigin="0.5,0.5">
+							<Grid.Effect>
+								<BlurEffect Radius="0"/>
+							</Grid.Effect>
+							<Grid.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform/>
+									<TranslateTransform/>
+								</TransformGroup>
+							</Grid.RenderTransform>
+							<VisualStateManager.VisualStateGroups>
+								<VisualStateGroup x:Name="CommonStates">
+									<VisualStateGroup.Transitions>
+										<VisualTransition From="MouseOver" GeneratedDuration="0:0:0.1" To="Normal"/>
+									</VisualStateGroup.Transitions>
+									<VisualState x:Name="Normal"/>
+									<VisualState x:Name="MouseOver">
+										<Storyboard AutoReverse="True" RepeatBehavior="Forever">
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="grid" RepeatBehavior="1x">
+												<EasingDoubleKeyFrame KeyTime="0" Value="1"/>
+												<EasingDoubleKeyFrame KeyTime="0:0:1" Value="0.745">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<SineEase EasingMode="EaseInOut"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+											</DoubleAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Pressed">
+										<Storyboard>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="1.1"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="1.1"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.Radius)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0" Value="0">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<QuarticEase EasingMode="EaseIn"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="50">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<QuarticEase EasingMode="EaseIn"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+											</DoubleAnimationUsingKeyFrames>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.KernelType)" Storyboard.TargetName="grid">
+												<DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static KernelType.Gaussian}"/>
+												<DiscreteObjectKeyFrame KeyTime="0:0:0.1" Value="{x:Static KernelType.Gaussian}"/>
+											</ObjectAnimationUsingKeyFrames>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.RenderingBias)" Storyboard.TargetName="grid">
+												<DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static RenderingBias.Performance}"/>
+												<DiscreteObjectKeyFrame KeyTime="0:0:0.1" Value="{x:Static RenderingBias.Performance}"/>
+											</ObjectAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Disabled"/>
+								</VisualStateGroup>
+								<VisualStateGroup x:Name="CheckStates">
+									<VisualState x:Name="Checked">
+										<Storyboard>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Path.Data)" Storyboard.TargetName="Path">
+												<DiscreteObjectKeyFrame KeyTime="0"> 
+													<DiscreteObjectKeyFrame.Value>
+														<Geometry>M18.3610001802444,0.5L30.5,0.5 30.5,30.5 18.3610001802444,30.5z M0.5,0.5L12.6389999389648,0.5 12.6389999389648,30.5 0.5,30.5z</Geometry>
+													</DiscreteObjectKeyFrame.Value>
+												</DiscreteObjectKeyFrame>
+											</ObjectAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="Path">
+												<EasingDoubleKeyFrame KeyTime="0" Value="0.855"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="Path">
+												<EasingDoubleKeyFrame KeyTime="0" Value="1.063"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Path">
+												<EasingDoubleKeyFrame KeyTime="0" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Path">
+												<EasingDoubleKeyFrame KeyTime="0" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Unchecked">
+										<Storyboard>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Path.Data)" Storyboard.TargetName="Path">
+												<DiscreteObjectKeyFrame KeyTime="0"> 
+													<DiscreteObjectKeyFrame.Value>
+														<Geometry>M0.5,0.5L100,50 0.5,100z</Geometry>
+													</DiscreteObjectKeyFrame.Value>
+												</DiscreteObjectKeyFrame>
+											</ObjectAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Indeterminate"/>
+								</VisualStateGroup>
+							</VisualStateManager.VisualStateGroups>
+							<Rectangle Fill="#BF000000" RadiusY="2" RadiusX="2" Stroke="{x:Null}" StrokeThickness="0"/>
+							<Path x:Name="Path" Data="M0.5,0.5L100.0,50.0 0.5,100.0z" Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="32" Margin="0" Stroke="White" VerticalAlignment="Center" Width="32" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
+								<Path.RenderTransform>
+									<TransformGroup>
+										<ScaleTransform/>
+										<SkewTransform/>
+										<RotateTransform/>
+										<TranslateTransform/>
+									</TransformGroup>
+								</Path.RenderTransform>
+							</Path>
+						</Grid>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+		<Style x:Key="StopButtonStyle" TargetType="{x:Type ToggleButton}">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type ToggleButton}">
+						<Grid x:Name="grid" RenderTransformOrigin="0.5,0.5">
+							<Grid.Effect>
+								<BlurEffect Radius="0"/>
+							</Grid.Effect>
+							<Grid.RenderTransform>
+								<TransformGroup>
+									<ScaleTransform/>
+									<SkewTransform/>
+									<RotateTransform/>
+									<TranslateTransform/>
+								</TransformGroup>
+							</Grid.RenderTransform>
+							<VisualStateManager.VisualStateGroups>
+								<VisualStateGroup x:Name="CommonStates">
+									<VisualStateGroup.Transitions>
+										<VisualTransition From="MouseOver" GeneratedDuration="0:0:0.1" To="Normal"/>
+									</VisualStateGroup.Transitions>
+									<VisualState x:Name="Normal"/>
+									<VisualState x:Name="MouseOver">
+										<Storyboard AutoReverse="True" RepeatBehavior="Forever">
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="grid" RepeatBehavior="1x">
+												<EasingDoubleKeyFrame KeyTime="0" Value="1"/>
+												<EasingDoubleKeyFrame KeyTime="0:0:1" Value="0.745">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<SineEase EasingMode="EaseInOut"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+											</DoubleAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Pressed">
+										<Storyboard>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="1.1"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="1.1"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="0"/>
+											</DoubleAnimationUsingKeyFrames>
+											<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.Radius)" Storyboard.TargetName="grid">
+												<EasingDoubleKeyFrame KeyTime="0" Value="0">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<QuarticEase EasingMode="EaseIn"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+												<EasingDoubleKeyFrame KeyTime="0:0:0.1" Value="50">
+													<EasingDoubleKeyFrame.EasingFunction>
+														<QuarticEase EasingMode="EaseIn"/>
+													</EasingDoubleKeyFrame.EasingFunction>
+												</EasingDoubleKeyFrame>
+											</DoubleAnimationUsingKeyFrames>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.KernelType)" Storyboard.TargetName="grid">
+												<DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static KernelType.Gaussian}"/>
+												<DiscreteObjectKeyFrame KeyTime="0:0:0.1" Value="{x:Static KernelType.Gaussian}"/>
+											</ObjectAnimationUsingKeyFrames>
+											<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Effect).(BlurEffect.RenderingBias)" Storyboard.TargetName="grid">
+												<DiscreteObjectKeyFrame KeyTime="0" Value="{x:Static RenderingBias.Performance}"/>
+												<DiscreteObjectKeyFrame KeyTime="0:0:0.1" Value="{x:Static RenderingBias.Performance}"/>
+											</ObjectAnimationUsingKeyFrames>
+										</Storyboard>
+									</VisualState>
+									<VisualState x:Name="Disabled"/>
+								</VisualStateGroup>
+								<VisualStateGroup x:Name="CheckStates">
+									<VisualState x:Name="Checked"/>
+									<VisualState x:Name="Unchecked"/>
+									<VisualState x:Name="Indeterminate"/>
+								</VisualStateGroup>
+							</VisualStateManager.VisualStateGroups>
+							<Rectangle Fill="#BF000000" RadiusY="2" RadiusX="2" Stroke="{x:Null}" StrokeThickness="0"/>
+							<Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="32" RadiusY="0" RadiusX="0" Stroke="White" VerticalAlignment="Center" Width="32"/>
+						</Grid>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
+	</Window.Resources>
     <DockPanel>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image Name="canvas" Stretch="Uniform"/>
-        </Border>
+		<StackPanel Orientation="Horizontal" Margin="0" DockPanel.Dock="Bottom" HorizontalAlignment="Left" VerticalAlignment="Center">
+			<StackPanel.LayoutTransform>
+				<TransformGroup>
+					<ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+					<SkewTransform/>
+					<RotateTransform/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</StackPanel.LayoutTransform>
+    		<ToggleButton Content="PlayPause" HorizontalAlignment="Left" Height="64" Style="{DynamicResource PlayPauseButtonStyle}" VerticalAlignment="Top" Width="64"/>
+    		<ToggleButton Content="Stop" HorizontalAlignment="Left" Style="{DynamicResource StopButtonStyle}" VerticalAlignment="Top" Width="64" Height="64" Margin="0"/>
+    	</StackPanel>
+    	<Border BorderBrush="Black" BorderThickness="1" Margin="0" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center">
+    		<Image x:Name="canvas" Stretch="Uniform"/>
+    	</Border>
     </DockPanel>
 </Window>
