--- a/LifeGame/App.xaml
+++ b/LifeGame/App.xaml
@@ -1,10 +1,10 @@
 ﻿<Application x:Class="LifeGame.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:wpfApplication1="clr-namespace:LifeGame"
+             xmlns:my="clr-namespace:LifeGame"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <wpfApplication1:ViewModel x:Key="ViewModel" />
+        <my:ViewModel x:Key="ViewModel" />
 		<Style x:Key="PlayPauseButtonStyle" TargetType="{x:Type ToggleButton}">
 			<Setter Property="Template">
 				<Setter.Value>
@@ -139,10 +139,10 @@
 			</Setter>
             <Style.Triggers>
                 <Trigger Property="IsChecked" Value="True">
-                    <Setter Property="Command" Value="Pause" />
+                    <Setter Property="Command" Value="Play" />
                 </Trigger>
                 <Trigger Property="IsChecked" Value="False">
-                    <Setter Property="Command" Value="Play" />
+                    <Setter Property="Command" Value="Pause" />
                 </Trigger>
             </Style.Triggers>
 		</Style>
