--- a/LifeGame/MainWindow.xaml
+++ b/LifeGame/MainWindow.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="LifeGame.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions" xmlns:local="clr-namespace:LifeGame" x:Class="LifeGame.MainWindow"
         Title="MainWindow" Height="350" Width="525"
-        DataContext="{StaticResource ViewModel}">
-	<Window.Resources>
-	</Window.Resources>
+        DataContext="{StaticResource ViewModel}"
+        >
     <Window.CommandBindings>
         <CommandBinding Command="Play" Executed="PlayCommand_OnExecuted" />
         <CommandBinding Command="Pause" Executed="PauseCommand_OnExecuted" />
         <CommandBinding Command="Stop" Executed="StopCommand_OnExecuted" />
     </Window.CommandBindings>
-    <DockPanel>
+	<DockPanel>
 		<StackPanel Orientation="Horizontal" Margin="0" DockPanel.Dock="Bottom" HorizontalAlignment="Left" VerticalAlignment="Center">
 			<StackPanel.LayoutTransform>
 				<TransformGroup>
@@ -20,13 +20,23 @@
 					<TranslateTransform/>
 				</TransformGroup>
 			</StackPanel.LayoutTransform>
-    		<ToggleButton Content="PlayPause" HorizontalAlignment="Left" Height="64" Style="{DynamicResource PlayPauseButtonStyle}" VerticalAlignment="Top" Width="64"
-                          IsChecked="{Binding IsPlay, Mode=OneWay}"/>
-    		<ToggleButton Content="Stop" HorizontalAlignment="Left" Style="{DynamicResource StopButtonStyle}" VerticalAlignment="Top" Width="64" Height="64" Margin="0"
-                          Command="Stop"/>
-    	</StackPanel>
-    	<Border BorderBrush="Black" BorderThickness="1" Margin="0" DockPanel.Dock="Top" HorizontalAlignment="Center" VerticalAlignment="Center">
-    		<Image x:Name="Canvas" Stretch="Uniform"/>
-    	</Border>
-    </DockPanel>
+			<ToggleButton Content="PlayPause" HorizontalAlignment="Left" Height="64" Style="{DynamicResource PlayPauseButtonStyle}" VerticalAlignment="Top" Width="64"
+				IsChecked="{Binding IsPlay, Mode=OneWay}"/>
+			<ToggleButton Content="Stop" HorizontalAlignment="Left" Style="{DynamicResource StopButtonStyle}" VerticalAlignment="Top" Width="64" Height="64" Margin="0"
+				Command="Stop"/>
+		</StackPanel>
+		<ScrollViewer Margin="0" DockPanel.Dock="Top" CanContentScroll="True">
+			<Canvas ScrollViewer.CanContentScroll="True">
+				<Border BorderThickness="1" BorderBrush="Black">
+					<i:Interaction.Behaviors>
+						<local:MyMouseDragElementBehavior Canvas="{Binding Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Canvas}}}"/>
+					</i:Interaction.Behaviors>
+					<Image x:Name="Canvas" Width="{Binding Source.Width, Mode=OneWay, RelativeSource={RelativeSource Self}}" Height="{Binding Source.Height, Mode=OneWay, RelativeSource={RelativeSource Self}}"/>
+				</Border>
+			</Canvas>
+		</ScrollViewer>
+		<!--<Border BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Center" VerticalAlignment="Center">
+			<Image x:Name="Canvas" Stretch="Uniform"/>
+		</Border>-->
+	</DockPanel>
 </Window>
